--- a/index.html
+++ b/index.html
@@ -12155,8 +12155,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 </style>
     
     <title>EP uncum Local IPFS node</title>
-    <link rel="icon favicon" href="https://unpkg.com/@helia/css@1.0.1/logos/favicon.ico" />
-    <link href="https://cdn.jsdelivr.net/npm/prismjs/themes/prism.css" rel="stylesheet" />
+    <link rel="icon favicon" href="https://ep-uncum.surge.sh/fuck-ep.svg" />
   </head>
   <body style="margin: 20px;">
     <h1 style="font-size: 20px">EP Uncum IPFS node</h1>
